[tool.poetry]
name = "be-comm-v2"
version = "0.1.0"
description = "be-common-v2 root"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
be-comm-messages = {path = "packages/be-comm-messages", develop = true}

[tool.poetry.group.dev.dependencies]
be-comm-constants = {path = "packages/be-comm-constants", develop = true}
be-comm-db-models = {path = "packages/be-comm-db-models", develop = true}
be-comm-messages = {path = "packages/be-comm-messages", develop = true}
pytest = "^8.3.2"

[tool.pytest.ini_options]
addopts = "-v -x --color=yes"
testpaths = [
    "tests"
]
log_cli = 1
